upcxx-2023.9.0/test/neg/neg-rpc_ff13.errc
Deserialized type of all rpc arguments must be MoveConstructible.
